WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33855
error events don't fire if no <source> elements passed to media engine
https://bugs.webkit.org/show_bug.cgi?id=33855
Summary
error events don't fire if no <source> elements passed to media engine
Eric Carlson
Reported
2010-01-19 12:19:47 PST
No error event is fired if a none of a media element's <source> elements has a valid src, media, or type attribute, but the spec says: "[If] the media element has neither a src attribute nor a source element child: set the networkState to NETWORK_EMPTY, and abort these steps; the synchronous section ends." To reproduce: 1. Download the attached test case to LayoutTests/media 2. run-webkit-tests media/video-source-error-no-candidate.html
Attachments
Test case
(1.72 KB, text/html)
2010-01-19 12:20 PST
,
Eric Carlson
no flags
Details
Proposed patch
(5.57 KB, patch)
2010-01-19 13:04 PST
,
Eric Carlson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2010-01-19 12:20:19 PST
Created
attachment 46934
[details]
Test case
Eric Carlson
Comment 2
2010-01-19 13:04:08 PST
Created
attachment 46939
[details]
Proposed patch
Eric Carlson
Comment 3
2010-01-19 13:15:50 PST
<
rdar://problem/7557393
>
Eric Carlson
Comment 4
2010-01-19 13:16:09 PST
http://trac.webkit.org/changeset/53486
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug